--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -2,12 +2,131 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Kristofer Monisit at 2013-02-04 20:51:05 +0800 
+%% Created for Kristofer Monisit at 2013-02-06 15:55:48 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{xilinx-chapman08c,
+	Author = {Chapman, Ken},
+	Date-Added = {2013-02-05 19:30:25 +0800},
+	Date-Modified = {2013-02-05 19:30:56 +0800},
+	Edition = {1.0},
+	Month = {Feb},
+	Organization = {Xilinx, Inc.},
+	Title = {{Performance + Time = Memory (Cost Saving with 3-D Design)}},
+	Year = {2008}}
+
+@webpage{xilinx-poweroptions,
+	Date-Added = {2013-02-05 19:29:21 +0800},
+	Date-Modified = {2013-02-05 19:29:48 +0800},
+	Lastchecked = {2013 Feb 2},
+	Organization = {Xilinx, Inc.},
+	Title = {{What are FPGA Power Management Software Options}},
+	Url = {http://www.xilinx.com/csi/training/what-are-fpga-power-management-software-options.htm},
+	Bdsk-Url-1 = {http://www.xilinx.com/csi/training/what-are-fpga-power-management-hdl-coding-techniques.htm}}
+
+@conference{lamoureux08,
+	Author = {Lamoureux, J. and Luk, W.},
+	Booktitle = {Adaptive Hardware and Systems, 2008. AHS '08. NASA/ESA Conference on},
+	Date-Added = {2013-02-05 19:26:34 +0800},
+	Date-Modified = {2013-02-05 19:28:33 +0800},
+	Month = {Jun},
+	Pages = {338--345},
+	Title = {{An overview of low-power techniques for field-programmable gate arrays}},
+	Year = {2008}}
+
+@manual{xilinx-chapman08b,
+	Author = {Chapman, Ken},
+	Date-Added = {2013-02-05 19:24:30 +0800},
+	Date-Modified = {2013-02-05 19:24:59 +0800},
+	Edition = {1.0},
+	Month = {Feb},
+	Organization = {Xilinx, Inc.},
+	Title = {{Multiplexer Selection}},
+	Year = {2008}}
+
+@manual{xilinx-chapman08,
+	Author = {Chapman, Ken},
+	Date-Added = {2013-02-05 19:22:42 +0800},
+	Date-Modified = {2013-02-05 19:23:40 +0800},
+	Edition = {1.0.1},
+	Month = {Mar},
+	Organization = {Xilinx, Inc.},
+	Title = {{Get Smart About Reset: Think Local, Not Global}},
+	Year = {2008}}
+
+@manual{xilinx-chapman07,
+	Author = {Chapman, Ken},
+	Date-Added = {2013-02-05 19:20:58 +0800},
+	Date-Modified = {2013-02-05 19:21:44 +0800},
+	Edition = {1.0.1},
+	Month = {Oct},
+	Organization = {Xilinx, Inc.},
+	Title = {{Get Your Priorities Right — Make Your Design Up to 50\% Smaller}},
+	Year = {2007}}
+
+@webpage{xilinx-coding,
+	Date-Added = {2013-02-05 19:16:28 +0800},
+	Date-Modified = {2013-02-05 19:19:31 +0800},
+	Lastchecked = {2013 Feb 2},
+	Organization = {Xilinx, Inc.},
+	Title = {{Spartan-3 FPGA HDL Coding Techniques}},
+	Url = {http://www.xilinx.com/csi/training/spartan-3-fpga-hdl-coding-techniques.htm},
+	Bdsk-Url-1 = {http://www.xilinx.com/csi/training/what-are-fpga-power-management-hdl-coding-techniques.htm}}
+
+@webpage{xilinx-power,
+	Date-Added = {2013-02-05 19:13:09 +0800},
+	Date-Modified = {2013-02-05 19:19:27 +0800},
+	Edition = {1.1},
+	Lastchecked = {2013 Feb 2},
+	Organization = {Xilinx, Inc.},
+	Title = {{What are FPGA Power Management HDL Coding Techniques}},
+	Url = {http://www.xilinx.com/csi/training/what-are-fpga-power-management-hdl-coding-techniques.htm},
+	Bdsk-Url-1 = {http://www.xilinx.com/csi/training/what-are-fpga-power-management-hdl-coding-techniques.htm}}
+
+@manual{xilinx-garrault06,
+	Author = {Garrault, Philippe and Philofsky, Brian},
+	Date-Added = {2013-02-05 19:02:03 +0800},
+	Date-Modified = {2013-02-05 19:20:55 +0800},
+	Edition = {1.1},
+	Month = {Jan},
+	Organization = {Xilinx, Inc.},
+	Title = {{HDL Coding Practices to Accelerate Design Performance}},
+	Year = {2006}}
+
+@manual{xilinx-chapman06,
+	Author = {Chapman, Ken},
+	Date-Added = {2013-02-05 18:58:53 +0800},
+	Date-Modified = {2013-02-05 19:01:00 +0800},
+	Edition = {rev2},
+	Month = {Feb},
+	Organization = {Xilinx, Inc.},
+	Title = {{Rotary Encoder Interface Spartan-3E Starter Kit}},
+	Year = {2006}}
+
+@manual{xilinx-spartan11,
+	Date-Added = {2013-02-04 22:33:24 +0800},
+	Date-Modified = {2013-02-04 22:35:28 +0800},
+	Edition = {v1.2},
+	Month = {Jan},
+	Organization = {Xilinx, Inc.},
+	Title = {{Spartan-3E FPGA Starter Kit Board User Guide}},
+	Year = {2011}}
+
+@inproceedings{wolff00,
+	Abstract = {High-level design for low power is difficult to accomplish especially for FPGA designs. Presents a design technique that uses pre-computed tables that characterize the RTL and Intellectual Property (IF) components to estimate power. Actual tables were computed and the low-power design technique demonstrated. The results show that a lower power design can be achieved given this design methodology},
+	Author = {Wolff, F.G. and Knieser, M.J. and Weyer, D.J. and Papachristou, C.A.},
+	Booktitle = {National Aerospace and Electronics Conference, 2000. NAECON 2000. Proceedings of the IEEE 2000},
+	Date-Added = {2013-02-04 21:08:38 +0800},
+	Date-Modified = {2013-02-04 21:08:46 +0800},
+	Doi = {10.1109/NAECON.2000.894960},
+	Keywords = {Application specific integrated circuits;Costs;Design methodology;Digital filters;Electronics packaging;Energy consumption;Field programmable gate arrays;Finite impulse response filter;Intellectual property;Logic;FIR filters;digital filters;field programmable gate arrays;high level synthesis;industrial property;table lookup;FIR;FPGA design;Intellectual Property;RTL;digital filters;high level design;look up table;low power methods;pre-computed tables;},
+	Pages = {554--559},
+	Title = {{High-level low power FPGA design methodology}},
+	Year = {2000}}
 
 @inproceedings{gupta10,
 	Author = {Gupta, V. and Kandhalu, A. and Rajkumar, R.R.},
@@ -5115,7 +5234,7 @@ unity gain bandwidth},
 		<key>group name</key>
 		<string>ADC</string>
 		<key>keys</key>
-		<string>lewis87,nikandish07,temes85,song88,sutarja88</string>
+		<string>song88,nikandish07,sutarja88,temes85,lewis87</string>
 	</dict>
 	<dict>
 		<key>group name</key>
@@ -5133,7 +5252,7 @@ unity gain bandwidth},
 		<key>group name</key>
 		<string>Energy Harvesting</string>
 		<key>keys</key>
-		<string>zargham12,torres09,vijayaraghavan10,kimball09,sun12,carlson10,kosonen10,kong12,lallart10,szarka12,ulukus12,bandyopadhyay12,lallart12,alippi08,mane09,cheng11,lu11,khosropour12,liang12,lallart08,peters10,lee12,peters11,tan11,yoo12,maurath12,meninger01,chao11,ramadass10,rahimi12,sharma10,tashiro11,xu11,joseph05,richelli12,pellerano10,ramadass11,lallart10b,wardlaw11,hehn12,rao11,mehraeen10,paradiso05,levron11,hande10,bhuiyan10,sudevalayam11,moghe12b,krikke05,ramadass07,darmayuda12,zhang12c,richelli09</string>
+		<string>richelli09,torres09,vijayaraghavan10,kimball09,sun12,carlson10,kosonen10,kong12,lallart10,szarka12,ulukus12,bandyopadhyay12,lallart12,alippi08,mane09,cheng11,lu11,khosropour12,liang12,lallart08,peters10,lee12,peters11,tan11,yoo12,maurath12,meninger01,chao11,ramadass10,rahimi12,sharma10,tashiro11,xu11,joseph05,richelli12,pellerano10,ramadass11,lallart10b,wardlaw11,hehn12,rao11,mehraeen10,paradiso05,levron11,hande10,bhuiyan10,sudevalayam11,moghe12b,krikke05,ramadass07,zhang12c,zargham12,darmayuda12</string>
 	</dict>
 	<dict>
 		<key>group name</key>
@@ -5145,7 +5264,7 @@ unity gain bandwidth},
 		<key>group name</key>
 		<string>Sir Louis</string>
 		<key>keys</key>
-		<string>pelgrom98,vanderwagt04,lipka10,zhang12,kinget96,aparicio02,taranovich12-mag,dautriche11,skotnicki05,lewyn09,pelgrom89</string>
+		<string>pelgrom98,vanderwagt04,lipka10,skotnicki05,kinget96,aparicio02,zhang12,taranovich12-mag,lewyn09,dautriche11,pelgrom89</string>
 	</dict>
 	<dict>
 		<key>group name</key>
